--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,21 @@
 [versions]
-accompanistSystemuicontroller = "0.32.0"
-agp = "8.10.1"
-hazeMaterials = "1.6.4"
-kotlin = "2.0.21"
-coreKtx = "1.16.0"
+accompanistSystemuicontroller = "0.36.0"
+agp = "8.13.0"
+hazeMaterials = "1.6.10"
+kotlin = "2.2.21"
+coreKtx = "1.17.0"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.9.1"
-activityCompose = "1.10.1"
-composeBom = "2025.06.00"
-mathparserOrgMxparser = "5.0.7"
-navigationCompose = "2.9.0"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
+materialIconsExtended = "1.7.8"
+lifecycleRuntimeKtx = "2.9.4"
+activityCompose = "1.11.0"
+composeBom = "2025.10.01"
+mathparserOrgMxparser = "6.1.0"
+navigationCompose = "2.9.5"
 appcompat = "1.7.1"
-xenonCommons = "1.3.2"
-material3WindowSizeClassAndroid = "1.3.2"
+xenonCommons = "2.0.2"
+material3WindowSizeClassAndroid = "1.4.0"
 
 
 [libraries]
@@ -22,6 +23,7 @@ material3WindowSizeClassAndroid = "1.3.2"
 accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanistSystemuicontroller" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
 haze = { module = "dev.chrisbanes.haze:haze", version.ref = "hazeMaterials" }
 haze-materials = { module = "dev.chrisbanes.haze:haze-materials", version.ref = "hazeMaterials" }
