--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,24 @@
 [versions]
 accompanistSystemuicontroller = "0.36.0"
-agp = "8.13.0"
-hazeMaterials = "1.6.10"
+agp = "8.13.2"
+hazeMaterials = "1.7.1"
 kotlin = "2.2.21"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 materialIconsExtended = "1.7.8"
-lifecycleRuntimeKtx = "2.9.4"
-activityCompose = "1.11.0"
-composeBom = "2025.10.01"
+lifecycleRuntimeKtx = "2.10.0"
+activityCompose = "1.12.1"
+composeBom = "2025.12.00"
 mathparserOrgMxparser = "6.1.0"
-navigationCompose = "2.9.5"
+navigationCompose = "2.9.6"
 appcompat = "1.7.1"
-xenonCommons = "2.0.2"
 material3WindowSizeClassAndroid = "1.4.0"
+
+xenonCommons = "2.2.1"
+#noinspection UnusedVersionCatalogEntry
+xenonUi = "3.1"
 
 
 [libraries]
